...
                android:layout_height="wrap_content"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/search_track_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:hint="Title or artist"/>
...
    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_track_fab"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_search_24dp"/>


...
