<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="be.kdg.teamd.beatbuddy.activities.CreatePlaylistActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/create_playlist_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="be.kdg.teamd.beatbuddy.activities.CreatePlaylistActivity"
        tools:showIn="@layout/activity_create_organisation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_playlist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_playlist_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/key" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_playlist_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:minLines="3" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="4dp">

                <TextView
                    android:id="@+id/text_playlist_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:text="@string/image"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_playlist_pick_img"
                    style="@style/MaterialButtonWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="@string/pick_image" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:text="@string/create_playlist_as"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radiogroup_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="12dp">

                    <RadioButton
                        android:id="@+id/radio_playlist_individual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:checked="true"
                        android:text="@string/individual" />

                    <RadioButton
                        android:id="@+id/radio_playlist_organisation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:text="@string/organisation" />
                </RadioGroup>

                <Spinner
                    android:id="@+id/spinner_playlist_organisation"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignBottom="@id/radiogroup_playlist"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/radiogroup_playlist"
                    android:clickable="false" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp">

                <ProgressBar
                    android:id="@+id/ic_createplaylist_loading"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

                <Button
                    android:id="@+id/btn_create_playlist"
                    style="@style/MaterialButtonBlack"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/create" />



            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>