...
    <string name="key">Key</string>
    <string name="description">Description</string>
    <string name="create_playlist_as">Create playlist as</string>
    <string name="individual">Individual</string>
    <string name="organisation">Organisation</string>
    <string name="title_activity_create_playlist">Create playlist</string>
    <string name="image">Image</string>
    <string name="pick_image">Pick image</string>
    <string name="create">Create</string>
    <string name="guest">Guest</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="title_activity_add_track">Search for a track</string>
    <string name="user_no_organisations">You are not a member of any organisation</string>
...
